# internal/model/response/shipping.go
@@ -22,12 +22,12 @@ type ShippingCostResponse struct {
 }
 
 type KomerceProvinceResponse struct {
-	Meta Meta   `json:"meta"`
+	Meta Meta                 `json:"meta"`
 	Data []RajaOngkirProvince `json:"data"`
 }
 
 type KomerceCityResponse struct {
-	Meta Meta   `json:"meta"`
+	Meta Meta             `json:"meta"`
 	Data []RajaOngkirCity `json:"data"`
 }
 
@@ -51,26 +51,42 @@ type Status struct {
 }
 
 type RajaOngkirProvince struct {
-	ProvinceID int `json:"id"`
+	ProvinceID int    `json:"id"`
 	Province   string `json:"name"`
 }
 
 type RajaOngkirCity struct {
-	CityID     int `json:"id"`
-	ProvinceID int `json:"province_id"`
+	CityID     int    `json:"id"`
+	ProvinceID int    `json:"province_id"`
 	Province   string `json:"province_name"`
 	Type       string `json:"type"`
 	CityName   string `json:"name"`
 	PostalCode string `json:"postal_code"`
 }
 
+type DistrictResponse struct {
+	DistrictID   string `json:"district_id"`
+	CityID       string `json:"city_id"`
+	City         string `json:"city"`
+	DistrictName string `json:"district_name"`
+	Type         string `json:"type"`
+}
+
+type RajaOngkirDistrict struct {
+	DistrictID   int    `json:"id"`
+	CityID       int    `json:"city_id"`
+	City         string `json:"city_name"`
+	DistrictName string `json:"name"`
+	Type         string `json:"type"`
+}
+
 type RajaOngkirCost struct {
-	Code string `json:"code"`
-	Name string `json:"name"`
+	Code  string `json:"code"`
+	Name  string `json:"name"`
 	Costs []struct {
 		Service     string `json:"service"`
 		Description string `json:"description"`
-		Cost []struct {
+		Cost        []struct {
 			Value int    `json:"value"`
 			ETD   string `json:"etd"`
 			Note  string `json:"note"`
